# openMVG

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  AUTHORS  BUILD  BUILD.md  CGlWindow.hpp  CONTRIBUTING.md  COPYRIGHT.md  Dockerfile  README.md  appveyor.yml  default.nix  license.libmv  pixi.toml  snapcraft.yaml  tianxian_test.bat  必读.txt
src/: .CMakeLists.txt.swp  CMakeLists.txt  cmake_uninstall.cmake.in  conanfile.txt
src/cmakeFindModules/: AddCompilerFlag.cmake  CXX11.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  FindAlembic.cmake  FindCCTag.cmake  FindCeres.cmake  FindClp.cmake  FindCoinUtils.cmake  FindFlann.cmake  FindGlog.cmake  FindLemon.cmake  FindMosek.cmake  FindOPTPP.cmake  FindOpenGV.cmake  FindOpenMVG.cmake  FindOsi.cmake  FindSphinx.cmake  FindTBB.cmake  OpenMVGConfig.cmake.in  OptimizeForArchitecture.cmake  UpdateCacheVariable.cmake
src/dependencies/minus/: CMakeLists.txt
src/nonFree/: CMakeLists.txt
src/nonFree/matching_cascade_hashing/: CMakeLists.txt  CasHash.cpp  CasHash.hpp  Matcher_CascadeHashing.hpp  main_computeMatchesCasHas.cpp
src/nonFree/rich_sift/: Rich_SIFT_describer.hpp  Rich_SIFT_describer_io.hpp
src/nonFree/sift/: CMakeLists.txt  README.openMVG  SIFT.hpp  SIFT_describer.cpp  SIFT_describer.hpp  SIFT_describer_io.hpp  SIFT_float_describer.hpp  sift.hpp
src/openMVG/: CMakeLists.txt  logger.hpp  test_utility_functions.hpp  types.hpp  version.h  version.hpp
src/openMVG/bundle_adjustment/: CMakeLists.txt  bundle_adjustment_test.cpp  pinhole_Rtf_ceres_functor.hpp  pinhole_brown_Rt_ceres_functor.hpp  pinhole_ceres_functor.hpp  pinhole_f_Rt_ceres_functor.hpp  problem_data_container.hpp
src/openMVG/calibration/: CMakeLists.txt  bestImages.cpp  bestImages.hpp  calibration.cpp  calibration.hpp  exportData.cpp  exportData.hpp  patternDetect.cpp  patternDetect.hpp
src/openMVG/cameras/: BrownPinholeCamera.hpp  CMakeLists.txt  Camera_Common.hpp  Camera_IO.cpp  Camera_IO.hpp  Camera_IO_test.cpp  Camera_Intrinsics.cpp  Camera_Intrinsics.hpp  Camera_Intrinsics_io.hpp  Camera_Pinhole.cpp  Camera_Pinhole.hpp  Camera_Pinhole_2.hpp  Camera_Pinhole_2_io.hpp  Camera_Pinhole_Brown.cpp  Camera_Pinhole_Brown.hpp  Camera_Pinhole_Brown_2.hpp  Camera_Pinhole_Brown_2_io.hpp  Camera_Pinhole_Brown_io.hpp  Camera_Pinhole_Brown_test.cpp  Camera_Pinhole_Fisheye.cpp  Camera_Pinhole_Fisheye.hpp  Camera_Pinhole_Fisheye1.hpp  Camera_Pinhole_Fisheye1_test.cpp  Camera_Pinhole_Fisheye_io.hpp  Camera_Pinhole_Fisheye_test.cpp  Camera_Pinhole_Radial.cpp  Camera_Pinhole_Radial.hpp  Camera_Pinhole_Radial_io.hpp  Camera_Pinhole_Radial_test.cpp  Camera_Pinhole_Subpose.hpp  Camera_Pinhole_Thin_Prism_Fisheye.hpp  Camera_Pinhole_Thin_Prism_Fisheye_io.hpp  Camera_Pinhole_Thin_Prism_Fisheye_test.cpp  Camera_Pinhole_io.hpp  Camera_Pinhole_test.cpp  Camera_Spherical.cpp  Camera_Spherical.hpp  Camera_Spherical_io.hpp  Camera_Spherical_test.cpp  Camera_Subset_Parametrization_test.cpp  (+7 more)
src/openMVG/clustering/: CMakeLists.txt  kmeans.hpp  kmeans_test.cpp  kmeans_trait.hpp
src/openMVG/color_harmonization/: CMakeLists.txt  global_quantile_gain_offset_alignment.hpp  global_quantile_gain_offset_alignment_test.cpp  selection_VLDSegment.hpp  selection_fullFrame.hpp  selection_interface.hpp  selection_matchedPoints.hpp
src/openMVG/dataio/: AlembicExporter.cpp  AlembicExporter.hpp  AlembicImporter.cpp  AlembicImporter.hpp  AlembicImporter_test.cpp  CMakeLists.txt  FeedProvider.cpp  FeedProvider.hpp  IFeed.cpp  IFeed.hpp  ImageFeed.cpp  ImageFeed.hpp  VideoFeed.cpp  VideoFeed.hpp
src/openMVG/exif/: CMakeLists.txt  exif_IO.cpp  exif_IO.hpp  exif_IO_EasyExif.cpp  exif_IO_EasyExif.hpp  exif_IO_test.cpp  panoptic_params.h
src/openMVG/exif_IO/: CMakeLists.txt  exif_IO.hpp  exif_IO_EasyExif.hpp  exif_IO_Exiv2.hpp  exif_IO_openExif.hpp  exif_IO_test.cpp
src/openMVG/features/: CMakeLists.txt  binary_regions.hpp  descriptor.hpp  feature.cpp  feature.hpp  feature_container.hpp  features.hpp  features_test.cpp  image_describer.cpp  image_describer.hpp  image_describer_akaze.cpp  image_describer_akaze.hpp  image_describer_akaze_io.hpp  image_describer_cudasift.hpp  image_describer_deep.hpp  image_describer_latch.hpp  image_describer_orb.hpp  image_describer_test.cpp  io_regions_type.cpp  io_regions_type.hpp  keypointSet.hpp  regions.cpp  regions.hpp  regions_factory.cpp  regions_factory.hpp  regions_factory_io.hpp  regions_scale_sort.hpp  scalar_regions.hpp  selection.cpp  selection.hpp  svgVisualization.cpp  svgVisualization.hpp  svg_features.cpp  svg_features.hpp
src/openMVG/geodesy/: CMakeLists.txt  geodesy.hpp  geodesy_test.cpp
src/openMVG/geometry/: CMakeLists.txt  Similarity3.cpp  Similarity3.hpp  Similarity3_Kernel.cpp  Similarity3_Kernel.hpp  Similarity3_test.cpp  box.cpp  box.hpp  convex_hull.cpp  convex_hull.hpp  convex_hull_test.cpp  frustum.cpp  frustum.hpp  frustum_box_intersection_test.cpp  frustum_intersection_test.cpp  half_space_intersection.cpp  half_space_intersection.hpp  half_space_intersection_test.cpp  kd_tree_3d.hpp  kd_tree_3d_test.cpp  plane_estimation_kernel.hpp  plane_estimation_kernel_test.cpp  pose3.cpp  pose3.hpp  pose3_io.hpp  rigid_transformation3D_srt.cpp  rigid_transformation3D_srt.hpp  rigid_transformation3D_srt_test.cpp
src/openMVG/graph/: CMakeLists.txt  connectedComponent.hpp  connectedComponent_test.cpp  graph.hpp  graph_builder.hpp  graph_graphviz_export.hpp  graph_stats.hpp  graph_triplet_finder.hpp  graph_triplet_finder_test.cpp  triplet_finder.hpp  triplet_finder_test.cpp
src/openMVG/graphics/: CMakeLists.txt  color_gradient.hpp  color_gradient_test.cpp
src/openMVG/image/: CMakeLists.txt  image.hpp  image_concat.hpp  image_container.hpp  image_converter.hpp  image_convolution.hpp  image_convolution_base.hpp  image_convolution_cpp_openmp.hpp  image_convolution_cpp_thread.hpp  image_convolution_sse.hpp  image_diffusion.hpp  image_diffusion_cpp_thread.hpp  image_drawing.hpp  image_drawing_test.cpp  image_filtering.hpp  (+12 more)
src/openMVG_Samples/: CMakeLists.txt
src/software/: CMakeLists.txt
src/testing/: CMakeLists.txt  testing.h
(+1224 files in other folders)
